--- a/English.lproj/ServerRepositoryRefSheet.xib
+++ b/English.lproj/ServerRepositoryRefSheet.xib
@@ -409,18 +409,18 @@
 								</array>
 							</object>
 						</object>
-						<object class="NSTextField" id="628671480">
+						<object class="NSTextField" id="539491529">
 							<reference key="NSNextResponder" ref="250803238"/>
 							<int key="NSvFlags">266</int>
 							<string key="NSFrame">{{239, 59}, {389, 22}}</string>
 							<reference key="NSSuperview" ref="250803238"/>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSTextFieldCell" key="NSCell" id="579478425">
+							<object class="NSTextFieldCell" key="NSCell" id="593880950">
 								<int key="NSCellFlags">-1803944383</int>
 								<int key="NSCellFlags2">272630784</int>
 								<string key="NSContents"/>
 								<reference key="NSSupport" ref="879497694"/>
-								<reference key="NSControlView" ref="628671480"/>
+								<reference key="NSControlView" ref="539491529"/>
 								<bool key="NSDrawsBackground">YES</bool>
 								<reference key="NSBackgroundColor" ref="788587792"/>
 								<reference key="NSTextColor" ref="21086600"/>
@@ -470,18 +470,18 @@
 								<int key="NSPeriodicInterval">75</int>
 							</object>
 						</object>
-						<object class="NSTextField" id="738910475">
+						<object class="NSTextField" id="764729484">
 							<reference key="NSNextResponder" ref="250803238"/>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{301, 162}, {243, 17}}</string>
 							<reference key="NSSuperview" ref="250803238"/>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSTextFieldCell" key="NSCell" id="317153207">
+							<object class="NSTextFieldCell" key="NSCell" id="189017924">
 								<int key="NSCellFlags">68288064</int>
 								<int key="NSCellFlags2">272630784</int>
 								<string key="NSContents">Label</string>
 								<reference key="NSSupport" ref="879497694"/>
-								<reference key="NSControlView" ref="738910475"/>
+								<reference key="NSControlView" ref="764729484"/>
 								<reference key="NSBackgroundColor" ref="284772987"/>
 								<reference key="NSTextColor" ref="281321110"/>
 							</object>
@@ -597,14 +597,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">serverTextField</string>
-						<reference key="source" ref="271946156"/>
-						<reference key="destination" ref="62166892"/>
-					</object>
-					<int key="connectionID">404</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">theConnectionValidationController</string>
 						<reference key="source" ref="1001"/>
 						<reference key="destination" ref="271946156"/>
@@ -676,7 +668,7 @@
 						<string key="label">hidden: needsPassword</string>
 						<reference key="source" ref="494610969"/>
 						<reference key="destination" ref="1001"/>
-						<object class="NSNibBindingConnector" key="connector" id="261172231">
+						<object class="NSNibBindingConnector" key="connector" id="270464087">
 							<reference key="NSSource" ref="494610969"/>
 							<reference key="NSDestination" ref="1001"/>
 							<string key="NSLabel">hidden: needsPassword</string>
@@ -749,22 +741,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">passwordTextField</string>
-						<reference key="source" ref="271946156"/>
-						<reference key="destination" ref="494610969"/>
-					</object>
-					<int key="connectionID">447</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">hasPassword</string>
-						<reference key="source" ref="271946156"/>
-						<reference key="destination" ref="1043462223"/>
-					</object>
-					<int key="connectionID">448</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="494610969"/>
 						<reference key="destination" ref="1001"/>
@@ -790,10 +766,10 @@
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">hidden: needsPassword</string>
-						<reference key="source" ref="628671480"/>
+						<reference key="source" ref="539491529"/>
 						<reference key="destination" ref="1001"/>
-						<object class="NSNibBindingConnector" key="connector" id="612177111">
-							<reference key="NSSource" ref="628671480"/>
+						<object class="NSNibBindingConnector" key="connector" id="800660762">
+							<reference key="NSSource" ref="539491529"/>
 							<reference key="NSDestination" ref="1001"/>
 							<string key="NSLabel">hidden: needsPassword</string>
 							<string key="NSBinding">hidden</string>
@@ -810,10 +786,10 @@
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">hidden2: showRealPassword</string>
-						<reference key="source" ref="628671480"/>
+						<reference key="source" ref="539491529"/>
 						<reference key="destination" ref="1001"/>
 						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="628671480"/>
+							<reference key="NSSource" ref="539491529"/>
 							<reference key="NSDestination" ref="1001"/>
 							<string key="NSLabel">hidden2: showRealPassword</string>
 							<string key="NSBinding">hidden2</string>
@@ -825,7 +801,7 @@
 								<integer value="-1" key="NSNullPlaceholder"/>
 								<string key="NSValueTransformerName">NSNegateBoolean</string>
 							</dictionary>
-							<reference key="NSPreviousConnector" ref="612177111"/>
+							<reference key="NSPreviousConnector" ref="800660762"/>
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
@@ -848,7 +824,7 @@
 								<integer value="-1" key="NSNotApplicablePlaceholder"/>
 								<integer value="-1" key="NSNullPlaceholder"/>
 							</dictionary>
-							<reference key="NSPreviousConnector" ref="261172231"/>
+							<reference key="NSPreviousConnector" ref="270464087"/>
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
@@ -857,10 +833,10 @@
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: password</string>
-						<reference key="source" ref="738910475"/>
+						<reference key="source" ref="764729484"/>
 						<reference key="destination" ref="1001"/>
 						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="738910475"/>
+							<reference key="NSSource" ref="764729484"/>
 							<reference key="NSDestination" ref="1001"/>
 							<string key="NSLabel">value: password</string>
 							<string key="NSBinding">value</string>
@@ -873,10 +849,10 @@
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: password</string>
-						<reference key="source" ref="628671480"/>
+						<reference key="source" ref="539491529"/>
 						<reference key="destination" ref="1001"/>
 						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="628671480"/>
+							<reference key="NSSource" ref="539491529"/>
 							<reference key="NSDestination" ref="1001"/>
 							<string key="NSLabel">value: password</string>
 							<string key="NSBinding">value</string>
@@ -914,7 +890,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">theUnsecurePasswordTextField</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="628671480"/>
+						<reference key="destination" ref="539491529"/>
 					</object>
 					<int key="connectionID">474</int>
 				</object>
@@ -933,6 +909,22 @@
 						<reference key="destination" ref="980234671"/>
 					</object>
 					<int key="connectionID">476</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">theServerRefController</string>
+						<reference key="source" ref="271946156"/>
+						<reference key="destination" ref="1001"/>
+					</object>
+					<int key="connectionID">477</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="539491529"/>
+						<reference key="destination" ref="1001"/>
+					</object>
+					<int key="connectionID">478</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -997,8 +989,8 @@
 							<reference ref="494610969"/>
 							<reference ref="980234671"/>
 							<reference ref="66085599"/>
-							<reference ref="628671480"/>
-							<reference ref="738910475"/>
+							<reference ref="539491529"/>
+							<reference ref="764729484"/>
 						</array>
 						<reference key="parent" ref="530833982"/>
 					</object>
@@ -1244,30 +1236,30 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">459</int>
-						<reference key="object" ref="628671480"/>
+						<reference key="object" ref="539491529"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="579478425"/>
+							<reference ref="593880950"/>
 						</array>
 						<reference key="parent" ref="250803238"/>
 						<string key="objectName">UnsecurePassword</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">460</int>
-						<reference key="object" ref="579478425"/>
-						<reference key="parent" ref="628671480"/>
+						<reference key="object" ref="593880950"/>
+						<reference key="parent" ref="539491529"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">469</int>
-						<reference key="object" ref="738910475"/>
+						<reference key="object" ref="764729484"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="317153207"/>
+							<reference ref="189017924"/>
 						</array>
 						<reference key="parent" ref="250803238"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">470</int>
-						<reference key="object" ref="317153207"/>
-						<reference key="parent" ref="738910475"/>
+						<reference key="object" ref="189017924"/>
+						<reference key="parent" ref="764729484"/>
 					</object>
 				</array>
 			</object>
@@ -1363,7 +1355,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">476</int>
+			<int key="maxID">478</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1391,12 +1383,10 @@
 						<string key="NS.object.0">id</string>
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="hasPassword">NSButton</string>
 						<string key="parentController">id</string>
-						<string key="passwordTextField">NSTextField</string>
 						<string key="repositoryConnectionStatusImage">NSImageView</string>
 						<string key="repositoryConnectionStatusMessage">NSTextField</string>
-						<string key="serverTextField">NSTextField</string>
+						<string key="theServerRefController">ServerRepositoryRefSheetController</string>
 						<string key="validationProgressIndicator">NSProgressIndicator</string>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
